# drl_grasping

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  drl_grasping.repos  package.xml  python_requirements.txt
.docker/: build.bash  devel.bash  entrypoint.bash  run.bash  run_drl_grasping.bash
.docker/_host_setup/: install_docker.bash  lo_configure.bash
.docker/host/: install_docker_with_nvidia.bash
.docker/internal/: .bash_aliases  cyclonedds.xml  entrypoint.bash  setup_symlinks.bash
.git_hooks/: setup.bash
docker/: Dockerfile  docker-compose.yml  entrypoint.bash  python_requirements.txt  run.bash
docker/_host_setup/: cyclonedds.xml  setup.bash
drl_grasping/: __init__.py
drl_grasping/algorithms/: __init__.py  policies.py
drl_grasping/algorithms/common/: __init__.py  octree_replay_buffer.py  off_policy_algorithm.py
drl_grasping/algorithms/common/features_extractor/: modules.py  octree_cnn.py
drl_grasping/algorithms/sac/: __init__.py  policies.py  sac.py
drl_grasping/algorithms/td3/: policies.py
drl_grasping/algorithms/tqc/: policies.py  tqc.py
drl_grasping/control/: __init__.py  moveit2.py
drl_grasping/drl_octree/: __init__.py
drl_grasping/drl_octree/algorithms/: off_policy_algorithm.py
drl_grasping/drl_octree/algorithms/sac/: policies.py  sac.py
drl_grasping/drl_octree/algorithms/td3/: policies.py
drl_grasping/drl_octree/algorithms/tqc/: __init__.py  policies.py  tqc.py
drl_grasping/drl_octree/features_extractor/: __init__.py  image_cnn.py  modules.py  octree_cnn.py
drl_grasping/drl_octree/replay_buffer/: __init__.py  octree_replay_buffer.py  replay_buffer.py  utils.py
drl_grasping/envs/: __init__.py
drl_grasping/envs/control/: __init__.py  common.py  moveit2.py  moveit2_gripper.py  moveit2_servo.py
drl_grasping/envs/models/: __init__.py  box.py  camera.py  fidget_spinner.py  ground.py  panda.py  random_ground.py  random_object.py  realsense_d435.py
drl_grasping/envs/models/lights/: __init__.py  random_sun.py  sun.py
drl_grasping/envs/models/objects/: __init__.py  random_lunar_rock.py  random_object.py  random_primitive.py  rock.py
drl_grasping/envs/models/objects/primitives/: __init__.py  box.py  cylinder.py  plane.py  sphere.py
drl_grasping/envs/models/primitives/: __init__.py  box.py  cylinder.py  plane.py  random_primitive.py  sphere.py
drl_grasping/envs/models/robots/: __init__.py  kinova_j2s7s300.py  lunalab_summit_xl_gen.py  panda.py  shadow_hand.py  ur5_rg2.py
drl_grasping/envs/models/sensors/: __init__.py  camera.py
drl_grasping/envs/models/terrains/: __init__.py  ground.py  lunar_heightmap.py  lunar_surface.py  random_ground.py  random_lunar_surface.py
drl_grasping/envs/models/utils/: __init__.py  model_collection_randomizer.py  xacro2sdf.py
drl_grasping/envs/perception/: __init__.py  camera_subscriber.py  octree.py
drl_grasping/envs/randomizers/: __init__.py  fidget_spin.py  grasping.py  manipulation.py  manipulation_planetary.py
drl_grasping/envs/runtimes/: __init__.py  real_evaluation.py
drl_grasping/envs/tasks/: __init__.py  grasping.py  manipulation.py
drl_grasping/envs/tasks/curriculums/: __init__.py  common.py  grasp.py
drl_grasping/envs/tasks/fidget_spin/: __init__.py  fidget_spin.py  fidget_spin_octree.py
drl_grasping/envs/tasks/grasp/: __init__.py  curriculum.py  grasp.py  grasp_octree.py
drl_grasping/envs/tasks/grasp_planetary/: __init__.py  curriculum.py  grasp_planetary.py  grasp_planetary_color_image.py  grasp_planetary_depth_image.py  grasp_planetary_octree.py
drl_grasping/envs/tasks/reach/: __init__.py  reach.py  reach_color_image.py  reach_depth_image.py  reach_octree.py
drl_grasping/envs/utils/: __init__.py  conversions.py  gazebo.py  logging.py  math.py  model_collection_randomizer.py  tf2_broadcaster.py  tf2_listener.py
drl_grasping/envs/worlds/: default.sdf  default_interactive.sdf  lunar.sdf  training_grounds.sdf
drl_grasping/perception/: __init__.py  camera_subscriber.py  image_sub.py  octree.py  point_cloud_sub.py
drl_grasping/utils/: README.md  __init__.py  callbacks.py  conversions.py  exp_manager.py  hyperparams_opt.py  import_envs.py  model_collection_randomizer.py  tf2_broadcaster.py  utils.py  wrappers.py
drl_grasping/utils/training/: README.md  exp_manager.py  hyperparams_opt.py  utils.py  wrappers.py
examples/: ex_enjoy.bash  ex_enjoy_pretrained_agent.bash  ex_evaluate.bash  ex_evaluate_pretrained_agent.bash  ex_evaluate_real.bash  ex_optimize.bash  ex_preload_replay_buffer.bash  ex_random_agent.bash  ex_train.bash  ex_train_dreamerv2.bash  train_enjoy.bash
hyperparams/: sac.yml  td3.yml  tqc.yml
launch/: enjoy.launch.py  evaluate.launch.py  evaluate_real.launch.py  example.launch.py  example_with_world.launch.py  ign_moveit2.launch.py  ign_moveit2_headless.launch.py  optimize.launch.py  random_agent.launch.py  rviz.rviz  sim.launch.py  train.launch.py  train_dreamerv2.launch.py
launch/kinova_j2s7s300/: ign_moveit2_headless_kinova_j2s7s300.launch.py  ign_moveit2_kinova_j2s7s300.launch.py  rviz_kinova_j2s7s300.rviz
launch/real/: lunalab_summit_xl_gen.launch.py  real_lunalab_summit_xl_gen.launch.py
launch/sim/: sim.launch.py
launch/ur5_rg2/: ign_moveit2_headless_ur5_rg2.launch.py  ign_moveit2_ur5_rg2.launch.py  rviz_ur5_rg2.rviz
launch/worlds/: world_training_grounds.launch.py
rviz/: drl_grasping.rviz  drl_grasping_real_evaluation.rviz
scripts/: enjoy.py  evaluate.py  preload_replay_buffer.py  random_agent.py  test_grasping_env.py  train.py  train_dreamerv2.py  train_grasping.py
scripts/utils/: process_all_models.py  process_collection.py
scripts/utils/dataset/: dataset_download_test.bash  dataset_download_train.bash  dataset_set_test.bash  dataset_set_train.bash  dataset_unset_test.bash  dataset_unset_train.bash
tests/: test_env.py  test_octree_conv.py
