<?xml version="1.0"?>
<package format="3">
    <name>drl_grasping</name>
    <version>1.1.0</version>
    <description>Application of Deep Reinforcement Learning for acquiring a robust policy that allows robots to grasp diverse objects from compact 3D observations in form of octrees.</description>
    <maintainer email="orsula.andrej@gmail.com">Andrej Orsula</maintainer>
    <author>Andrej Orsula</author>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>

    <exec_depend>rclpy</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
